--- a/Lab1/Lab1 MDP system and Planning.ipynb
+++ b/Lab1/Lab1 MDP system and Planning.ipynb
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,31 +209,169 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(next_state_p([1,1,0], [1,1], [1,2,0], 0.25))"
+    "# This function returns the word for an action, based on the input of an action array.\n",
+    "# It will be used in testings later. \n",
+    "def action_to_words(a):\n",
+    "    a_word = []\n",
+    "    if a[0] == SIT:\n",
+    "        a_word.append('SIT')\n",
+    "    elif a[0] == FWD:\n",
+    "        a_word.append('FWD')\n",
+    "    else:\n",
+    "        a_word.append('BWD')\n",
+    "    \n",
+    "    if a[1] == NO_TURN:\n",
+    "        a_word.append('NO_TURN')\n",
+    "    elif a[1] == L_TURN:\n",
+    "        a_word.append('L_TURN')\n",
+    "    else:\n",
+    "        a_word.append('R_TURN')\n",
+    "    \n",
+    "    return a_word"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1(c). Test cases: \n",
+      "Case 1: current state:[1, 1, 0], action:['SIT', 'NO_TURN'], next state:[1, 1, 0], p_e:0\n",
+      "p_sa = 1\n",
+      "Case 2: current state:[2, 3, 5], action:['FWD', 'L_TURN'], next state:[2, 2, 4], p_e:0.1\n",
+      "p_sa = 0.8\n",
+      "Case 3: current state:[7, 7, 6], action:['BWD', 'R_TURN'], next state:[7, 7, 8], p_e:0.2\n",
+      "p_sa = 0.2\n",
+      "Case 4: current state:[5, 6, 2], action:['BWD', 'NO_TURN'], next state:[4, 6, 3], p_e:0.25\n",
+      "p_sa = 0.25\n"
+     ]
+    }
+   ],
    "source": [
-    "result = next_state([1,1,0], [1,1], 0.25)"
+    "# Four cases are tested for 1(c). \n",
+    "\n",
+    "print('1(c). Test cases: ')\n",
+    "states = [[1,1,0], [2,3,5], [7,7,6], [5,6,2]]\n",
+    "next_states = [[1,1,0], [2,2,4], [7,7,8], [4,6,3]]\n",
+    "actions = [[SIT, NO_TURN], [FWD, L_TURN], [BWD, R_TURN], [BWD, NO_TURN]]\n",
+    "p_errors = [0, 0.1, 0.2, 0.25]\n",
+    "\n",
+    "for i in range(len(p_errors)):\n",
+    "    s = states[i]\n",
+    "    a = actions[i]\n",
+    "    s_prime = next_states[i]\n",
+    "    p_e = p_errors[i]\n",
+    "    p_sa = next_state_p(s, a, s_prime, p_e)\n",
+    "    \n",
+    "    print('Case %s: current state:%s, action:%s, next state:%s, p_e:%s' \\\n",
+    "          % (i+1, s, action_to_words(a), s_prime, p_e))\n",
+    "    print('p_sa = %s' % p_sa)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1(d). Counts of next states generated with 5 run the sample size of 100:\n",
+      "Case 1: current state:[1, 1, 0], action:['SIT', 'NO_TURN'], p_e:0\n",
+      "Run 1: p_prime and counts: {'[1, 1, 0]': 100}\n",
+      "Run 2: p_prime and counts: {'[1, 1, 0]': 100}\n",
+      "Run 3: p_prime and counts: {'[1, 1, 0]': 100}\n",
+      "Run 4: p_prime and counts: {'[1, 1, 0]': 100}\n",
+      "Run 5: p_prime and counts: {'[1, 1, 0]': 100}\n",
+      "Case 2: current state:[2, 3, 5], action:['FWD', 'L_TURN'], p_e:0.1\n",
+      "Run 1: p_prime and counts: {'[3, 3, 3]': 5, '[2, 2, 4]': 83, '[2, 2, 5]': 12}\n",
+      "Run 2: p_prime and counts: {'[2, 2, 4]': 75, '[2, 2, 5]': 12, '[3, 3, 3]': 13}\n",
+      "Run 3: p_prime and counts: {'[2, 2, 4]': 81, '[2, 2, 5]': 9, '[3, 3, 3]': 10}\n",
+      "Run 4: p_prime and counts: {'[2, 2, 4]': 82, '[3, 3, 3]': 5, '[2, 2, 5]': 13}\n",
+      "Run 5: p_prime and counts: {'[2, 2, 4]': 73, '[3, 3, 3]': 17, '[2, 2, 5]': 10}\n",
+      "Case 3: current state:[7, 7, 6], action:['BWD', 'R_TURN'], p_e:0.2\n",
+      "Run 1: p_prime and counts: {'[7, 7, 8]': 23, '[7, 7, 7]': 61, '[7, 7, 6]': 16}\n",
+      "Run 2: p_prime and counts: {'[7, 7, 6]': 17, '[7, 7, 7]': 70, '[7, 7, 8]': 13}\n",
+      "Run 3: p_prime and counts: {'[7, 7, 7]': 54, '[7, 7, 8]': 14, '[7, 7, 6]': 32}\n",
+      "Run 4: p_prime and counts: {'[7, 7, 8]': 19, '[7, 7, 6]': 19, '[7, 7, 7]': 62}\n",
+      "Run 5: p_prime and counts: {'[7, 7, 8]': 17, '[7, 7, 7]': 71, '[7, 7, 6]': 12}\n",
+      "Case 4: current state:[5, 6, 2], action:['BWD', 'NO_TURN'], p_e:0.25\n",
+      "Run 1: p_prime and counts: {'[5, 5, 1]': 27, '[4, 6, 3]': 27, '[4, 6, 2]': 46}\n",
+      "Run 2: p_prime and counts: {'[5, 5, 1]': 27, '[4, 6, 3]': 21, '[4, 6, 2]': 52}\n",
+      "Run 3: p_prime and counts: {'[5, 5, 1]': 31, '[4, 6, 2]': 48, '[4, 6, 3]': 21}\n",
+      "Run 4: p_prime and counts: {'[4, 6, 2]': 54, '[4, 6, 3]': 27, '[5, 5, 1]': 19}\n",
+      "Run 5: p_prime and counts: {'[4, 6, 3]': 21, '[4, 6, 2]': 56, '[5, 5, 1]': 23}\n"
+     ]
+    }
+   ],
    "source": [
-    "for i in range(W):\n",
-    "    for j in range(L):\n",
-    "        print(reward([i,j,0]))"
+    "# Four cases are tested for 1(d). Distribution of next states generated are displayed. \n",
+    "# Test cases are defined in 1(c).\n",
+    "\n",
+    "S_SIZE = 100\n",
+    "RUN = 5\n",
+    "print('1(d). Counts of next states generated with %d run and the sample size of %d:' % (RUN, S_SIZE))\n",
+    "\n",
+    "\n",
+    "for i in range(len(p_errors)):\n",
+    "    s = states[i]\n",
+    "    a = actions[i]\n",
+    "    p_e = p_errors[i]\n",
+    "    print('Case %s: current state:%s, action:%s, p_e:%s' % (i+1, s, action_to_words(a), p_e))\n",
+    "    for r in range(RUN):\n",
+    "        next_state_counter = {}\n",
+    "        for n in range(S_SIZE):\n",
+    "            s_prime = str(next_state(s, a, p_e))\n",
+    "\n",
+    "            if s_prime in next_state_counter:\n",
+    "                next_state_counter[s_prime] += 1\n",
+    "            else:\n",
+    "                next_state_counter[s_prime] = 1\n",
+    "        print('Run %s: p_prime and counts: %s' % (r+1, next_state_counter))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2. Reward Map\n",
+      "-100  -100  -100  -100  -100  -100  -100  -100\n",
+      "-100  0     0     -10   0     1     0     -100\n",
+      "-100  0     0     -10   0     0     0     -100\n",
+      "-100  0     0     -10   0     0     0     -100\n",
+      "-100  0     0     0     0     0     0     -100\n",
+      "-100  0     0     0     0     0     0     -100\n",
+      "-100  0     0     0     0     0     0     -100\n",
+      "-100  -100  -100  -100  -100  -100  -100  -100\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Map for rewards is displayed, assuming the origin is at the bottom left \n",
+    "# and x axis to the right. \n",
+    "\n",
+    "print('2. Reward Map')\n",
+    "for j in range(L):    \n",
+    "    for i in range(W):\n",
+    "        r = int(reward([i,7-j,0]))\n",
+    "        if i == 7 :\n",
+    "            print(r)\n",
+    "        else:\n",
+    "            print(r, end = ' ' * (6 - len(str(r))))"
    ]
   },
   {
